# sfdlpy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  sfdlpy.py
data/: geodataurl.txt
lib/: print.py  sfdl_file.py  sfdl_utils.py
lib/param_types/: __init__.py
sfdlpy/: app.py  cli.py  ftp.py  geodata.py  param_types.py  sfdl_utils.py  utils.py  xml.py
sfdlpy/lib/: app.py  print.py  sfdl_file.py  sfdl_utils.py
sfdlpy/lib/param_types/: __init__.py  ftp_link.py
