[tool.poetry]
name = "sfdlpy"
version = "0.0.1"
description = "sfdl"
authors = ["strflw <strflw@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
Click = "7.0"
ftputil = "3.4"
pycryptodome = "3.9.4"
geoip2 = "^3.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sfdlpy = "sfdlpy.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
